umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_1,3-dioxolane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["O#n2#v2" "C#h2#v2" "O#n2#v2" "C#h2#v2" "C#h2#v2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single] [4 0 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["O#n2#v2" "C#h2#v2" "O#n2#v2" "C#h2#v2" "C#h2#v2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single] [4 0 :single]]}
    :success true}}
