umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_15-crown-5.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms [
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 13 :single]
        [13 14 :single]
        [0 14 :single]]}
    :success true}
  :counts {
    :output {
      :atoms [
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "O#n2#v2"
        "C#h2#v2"
        "C#h2#v2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 13 :single]
        [13 14 :single]
        [0 14 :single]]}
    :success true}}
